--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -5,5 +5,9 @@ div {
     font-size: 50px;
     text-align: center;
     font-weight: bold;
+    margin-bottom: 20px;
 }
 
+.q {
+    margin-bottom: 0px;
+}
