--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,18 +1,16 @@
 p {
     color: black; 
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, "DejaVu Sans" sans-serif;
     background-color: rgb(252, 181, 181);
 }
 
 p.unique {
-    font-size: 26px;
+    font-size: 24px;
 }
 
 div {
     color:blue;
     font-size: 36px;
-
-
 
 }
 
